Bug 1819323 - Avoid casting nsIURI to nsIURL in Link. r=emilio

`nsIURI` fails to cast to `nsIURL` so we used to get a nil url and
return empty string (e.g. for pathname). As we're able to get the
pathname information from URI, I wonder we can just use it directly
without casting to `nsIURL`. With doing so, we can fix the issue.

Differential Revision: https://phabricator.services.mozilla.com/D171233